    on debhelper and quilt to suit.
  * Drop CFLAGS that we don't need anymore (-fPIC, -D_REENTRANT,
    -D_GNU_SOURCE).
  * Explicitly add -O0 to CFLAGS when noopt is set.
  * debian/patches/autoconf.patch: pull ltmain.sh in, to fix some spurious
    library linkage in the modules.
  * Move pam_cracklib manpage to the libpam-cracklib package, and add the
    requisite Replaces

 -- Steve Langasek <vorlon@debian.org>  Tue, 01 Sep 2009 22:23:47 -0700

pam (1.1.0-2) unstable; urgency=low

  [ Steve Langasek ]
  * debian/patches/pam_unix_dont_trust_chkpwd_caller.patch: fix this patch
    to call setregid() instead of always returning an error on username
    mismatch in unix_chkpwd, needed in the SELinux case and in some corner
    cases with the broken_shadow option.  Thanks to Michael Spang for the
    analysis.  Closes: #543589.
  * fix the PAM mini-policy to not tell app maintainers that they don't need
    to depend on libpam-modules if they reference modules from there.
  * make libpam-runtime depend on libpam-modules (>= 1.0.1-6) - nothing else
    guarantees that we have pam_unix available for use by pam-auth-update.
  * Use /bin/sh instead of /bin/bash for libpam0g.postinst, since we've
    confirmed there are no longer any bashisms there.  Closes: #519973.
  * Clean up the libpam0g postinst a bit; invoke-rc.d has been a guaranteed
    interface for two stable release cycles now
  * debian/patches/namespace_with_awk_not_gawk: fix the sample
    namespace.init script's dependency on non-POSIX features of gawk, since
    we don't use gawk by default.  Closes: #518908.
  * Updated debconf translations:
    - German, thanks to Sven Joachim <svenjoac@gmx.de> (closes: #544464)

  [ Kees Cook ]
  * debian/local/common-password, debian/pam-configs/unix: switch from "md5"
    to "sha512" as password crypt default.

 -- Steve Langasek <vorlon@debian.org>  Mon, 31 Aug 2009 14:21:27 -0700

pam (1.1.0-1) unstable; urgency=low

  * New upstream version.