@@ -24,6 +24,9 @@ pam (1.1.0-3) UNRELEASED; urgency=low
     library linkage in the modules.
   * Move pam_cracklib manpage to the libpam-cracklib package, and add the
     requisite Replaces
+  * Drop dh_makeshlibs -V; everything from lenny on should use the .symbols
+    file instead, making the shlibs redundant so we don't need to care what
+    version gets listed there.
 
  -- Steve Langasek <vorlon@debian.org>  Tue, 01 Sep 2009 22:23:47 -0700
 
